Adjusting build and doc because of name changes & separation

--- a/locale/es/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/es/LC_MESSAGES/basic/plpgsql_function.po
@@ -298,19 +298,19 @@ msgstr "Solución"
 
 #: ../../build/docs/basic/plpgsql_function.rst:91
 msgid ""
-"Use ``pgr_extractVertices`` (explained in :doc:`graph_views`) to create "
+"Use ``pgr_extractVertices`` (explained in :doc:`graphs`) to create "
 "the vertices table"
 msgstr ""
-"Utilizar ``pgr_extractVertices`` (explicado en :doc:`graph_views`) para "
+"Utilizar ``pgr_extractVertices`` (explicado en :doc:`graphs`) para "
 "crear la tabla de vértices"
 
 #: ../../build/docs/basic/plpgsql_function.rst:93
 msgid ""
 "``JOIN`` the vertices table with ``ways_vertices`` (created in "
-":doc:`graph_views`) to get the ``x``, ``y``, ``geom`` information."
+":doc:`graphs`) to get the ``x``, ``y``, ``geom`` information."
 msgstr ""
 "``JOIN`` la tabla de vértices con ``ways_vertices`` (creada en "
-":doc:`graph_views`) para obtener la información de ``x``, ``y``, "
+":doc:`graphs`) para obtener la información de ``x``, ``y``, "
 "``geom``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:96
@@ -344,8 +344,8 @@ msgstr ""
 "las vistas."
 
 #: ../../build/docs/basic/plpgsql_function.rst:122
-msgid "See :doc:`graph_views`"
-msgstr "Ver :doc:`graph_views`"
+msgid "See :doc:`graphs`"
+msgstr "Ver :doc:`graphs`"
 
 #: ../../build/docs/basic/plpgsql_function.rst:125
 msgid "Exercise 3: Nearest Vertex"
