--- a/locale/es/LC_MESSAGES/un_sdg/sdg11-cities.po
+++ b/locale/es/LC_MESSAGES/un_sdg/sdg11-cities.po
@@ -314,7 +314,7 @@ msgstr ""
 msgid ""
 "The pgRouting function ``pgr_connectedComponents`` is used to complete "
 "this task and its explaind with more detail in "
-":doc:`../basic/graph_views`."
+":doc:`../basic/graphs`."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:244
