--- a/locale/es/LC_MESSAGES/un_sdg/sdg3-health.po
+++ b/locale/es/LC_MESSAGES/un_sdg/sdg3-health.po
@@ -588,12 +588,12 @@ msgstr "pgr_connectedComponents"
 #: ../../build/docs/un_sdg/sdg3-health.rst:423
 msgid ""
 "To remove the disconnected components on the road network, the following "
-"pgRouting functions, discussed on :doc:`../basic/graph_views`, will be "
+"pgRouting functions, discussed on :doc:`../basic/graphs`, will be "
 "used:"
 msgstr ""
 "Para eliminar los componentes desconectados en la red de carreteras, se "
 "utilizarán las siguientes funciones de pgRouting, discutidas en "
-":doc:`../basic/graph_views`:"
+":doc:`../basic/graphs`:"
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:426
 msgid "``pgr_extractVertices``"
