--- a/locale/es/LC_MESSAGES/un_sdg/sdg7-energy.po
+++ b/locale/es/LC_MESSAGES/un_sdg/sdg7-energy.po
@@ -181,12 +181,12 @@ msgstr "Extraer componentes conectados de carreteras"
 #: ../../build/docs/un_sdg/sdg7-energy.rst:99
 msgid ""
 "To remove the disconnected components on the road network, the following "
-"pgRouting functions, discussed on :doc:`../basic/graph_views`, will be "
+"pgRouting functions, discussed on :doc:`../basic/graphs`, will be "
 "used:"
 msgstr ""
 "Para eliminar los componentes desconectados en la red de carreteras, se "
 "utilizarán las siguientes funciones de pgRouting, discutidas en "
-":doc:`../basic/graph_views`:"
+":doc:`../basic/graphs`:"
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:102
 msgid "``pgr_extractVertices``"
