--- a/locale/pot/basic/plpgsql_function.pot
+++ b/locale/pot/basic/plpgsql_function.pot
@@ -267,11 +267,11 @@ msgid "Solution"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:91
-msgid "Use ``pgr_extractVertices`` (explained in :doc:`graph_views`) to create the vertices table"
+msgid "Use ``pgr_extractVertices`` (explained in :doc:`graphs`) to create the vertices table"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:93
-msgid "``JOIN`` the vertices table with ``ways_vertices`` (created in :doc:`graph_views`) to get the ``x``, ``y``, ``geom`` information."
+msgid "``JOIN`` the vertices table with ``ways_vertices`` (created in :doc:`graphs`) to get the ``x``, ``y``, ``geom`` information."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:96
@@ -301,7 +301,7 @@ msgid "It is left to the reader to remove disconected components on the views."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:122
-msgid "See :doc:`graph_views`"
+msgid "See :doc:`graphs`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:125
