--- a/locale/pot/un_sdg/sdg11-cities.pot
+++ b/locale/pot/un_sdg/sdg11-cities.pot
@@ -202,7 +202,7 @@ msgid "As the rivers in the data are not having single edge, i.e, multiple edges
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:241
-msgid "The pgRouting function ``pgr_connectedComponents`` is used to complete this task and its explaind with more detail in :doc:`../basic/graph_views`."
+msgid "The pgRouting function ``pgr_connectedComponents`` is used to complete this task and its explaind with more detail in :doc:`../basic/graphs`."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:244
