--- a/locale/pot/un_sdg/sdg7-energy.pot
+++ b/locale/pot/un_sdg/sdg7-energy.pot
@@ -105,7 +105,7 @@ msgid "Exercise 2: Remove disconnected components"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:99
-msgid "To remove the disconnected components on the road network, the following pgRouting functions, discussed on :doc:`../basic/graph_views`, will be used:"
+msgid "To remove the disconnected components on the road network, the following pgRouting functions, discussed on :doc:`../basic/graphs`, will be used:"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:102
