--- a/locale/sv/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/sv/LC_MESSAGES/basic/plpgsql_function.po
@@ -281,16 +281,16 @@ msgid "Solution"
 msgstr "Lösning"
 
 #: ../../build/docs/basic/plpgsql_function.rst:91
-msgid "Use ``pgr_extractVertices`` (explained in :doc:`graph_views`) to create the vertices table"
+msgid "Use ``pgr_extractVertices`` (explained in :doc:`graphs`) to create the vertices table"
 msgstr ""
-"Använd ``pgr_extractVertices`` (förklaras i :doc:`graph_views`) för att "
+"Använd ``pgr_extractVertices`` (förklaras i :doc:`graphs`) för att "
 "skapa tabellen med hörnpunkter"
 
 #: ../../build/docs/basic/plpgsql_function.rst:93
-msgid "``JOIN`` the vertices table with ``ways_vertices`` (created in :doc:`graph_views`) to get the ``x``, ``y``, ``geom`` information."
+msgid "``JOIN`` the vertices table with ``ways_vertices`` (created in :doc:`graphs`) to get the ``x``, ``y``, ``geom`` information."
 msgstr ""
 "``JOIN`` vertices tabellen med ``ways_vertices`` (skapad i "
-":doc:`graph_views`) för att få ``x``, ``y``, ``geom`` information."
+":doc:`graphs`) för att få ``x``, ``y``, ``geom`` information."
 
 #: ../../build/docs/basic/plpgsql_function.rst:96
 #: ../../build/docs/basic/plpgsql_function.rst:410
@@ -320,8 +320,8 @@ msgid "It is left to the reader to remove disconected components on the views."
 msgstr "Det är upp till läsaren att ta bort borttagna komponenter på vyerna."
 
 #: ../../build/docs/basic/plpgsql_function.rst:122
-msgid "See :doc:`graph_views`"
-msgstr "Se :doc:`graph_views`"
+msgid "See :doc:`graphs`"
+msgstr "Se :doc:`graphs`"
 
 #: ../../build/docs/basic/plpgsql_function.rst:125
 msgid "Exercise 3: Nearest Vertex"
