--- a/locale/sv/LC_MESSAGES/un_sdg/sdg11-cities.po
+++ b/locale/sv/LC_MESSAGES/un_sdg/sdg11-cities.po
@@ -251,10 +251,10 @@ msgstr ""
 "komponenterna och lagras sedan i en ny kolumn med namnet ``component``."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:241
-msgid "The pgRouting function ``pgr_connectedComponents`` is used to complete this task and its explaind with more detail in :doc:`../basic/graph_views`."
+msgid "The pgRouting function ``pgr_connectedComponents`` is used to complete this task and its explaind with more detail in :doc:`../basic/graphs`."
 msgstr ""
 "PgRouting-funktionen ``pgr_connectedComponents`` används för att slutföra "
-"denna uppgift och förklaras mer detaljerat i :doc:`../basic/graph_views`."
+"denna uppgift och förklaras mer detaljerat i :doc:`../basic/graphs`."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:244
 msgid "A sub-query is created to find out all the connected components. After that, the ``component`` column is updated using the results obtained from the sub-query. This helps in storing the component id in the ``waterways_ways_vertices_pgr`` table. Next query uses this output and stores the component id in the waterways_ways (edges) table. Follow the steps given below to complete this task."
