--- a/locale/sv/LC_MESSAGES/un_sdg/sdg3-health.po
+++ b/locale/sv/LC_MESSAGES/un_sdg/sdg3-health.po
@@ -470,10 +470,10 @@ msgid "Exercise 12: Remove disconnected components"
 msgstr "Övning 12: Demontera bortkopplade komponenter"
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:423
-msgid "To remove the disconnected components on the road network, the following pgRouting functions, discussed on :doc:`../basic/graph_views`, will be used:"
+msgid "To remove the disconnected components on the road network, the following pgRouting functions, discussed on :doc:`../basic/graphs`, will be used:"
 msgstr ""
 "För att ta bort de frånkopplade komponenterna i vägnätet används följande "
-"pgRouting-funktioner, som diskuteras i :doc:`../basic/graph_views`:"
+"pgRouting-funktioner, som diskuteras i :doc:`../basic/graphs`:"
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:426
 msgid "``pgr_extractVertices``"
