--- a/locale/en/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/en/LC_MESSAGES/basic/plpgsql_function.po
@@ -282,14 +282,14 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:91
 msgid ""
-"Use ``pgr_extractVertices`` (explained in :doc:`graph_views`) to create "
+"Use ``pgr_extractVertices`` (explained in :doc:`graphs`) to create "
 "the vertices table"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:93
 msgid ""
 "``JOIN`` the vertices table with ``ways_vertices`` (created in "
-":doc:`graph_views`) to get the ``x``, ``y``, ``geom`` information."
+":doc:`graphs`) to get the ``x``, ``y``, ``geom`` information."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:96
@@ -319,7 +319,7 @@ msgid "It is left to the reader to remove disconected components on the views."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:122
-msgid "See :doc:`graph_views`"
+msgid "See :doc:`graphs`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:125
