--- a/locale/en/LC_MESSAGES/un_sdg/sdg3-health.po
+++ b/locale/en/LC_MESSAGES/un_sdg/sdg3-health.po
@@ -477,7 +477,7 @@ msgstr ""
 #: ../../build/docs/un_sdg/sdg3-health.rst:423
 msgid ""
 "To remove the disconnected components on the road network, the following "
-"pgRouting functions, discussed on :doc:`../basic/graph_views`, will be "
+"pgRouting functions, discussed on :doc:`../basic/graphs`, will be "
 "used:"
 msgstr ""
 
