--- a/locale/en/LC_MESSAGES/un_sdg/sdg7-energy.po
+++ b/locale/en/LC_MESSAGES/un_sdg/sdg7-energy.po
@@ -139,7 +139,7 @@ msgstr ""
 #: ../../build/docs/un_sdg/sdg7-energy.rst:99
 msgid ""
 "To remove the disconnected components on the road network, the following "
-"pgRouting functions, discussed on :doc:`../basic/graph_views`, will be "
+"pgRouting functions, discussed on :doc:`../basic/graphs`, will be "
 "used:"
 msgstr ""
 
