--- a/locale/pot/un_sdg/sdg3-health.pot
+++ b/locale/pot/un_sdg/sdg3-health.pot
@@ -388,7 +388,7 @@ msgid "Exercise 12: Remove disconnected components"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:423
-msgid "To remove the disconnected components on the road network, the following pgRouting functions, discussed on :doc:`../basic/graph_views`, will be used:"
+msgid "To remove the disconnected components on the road network, the following pgRouting functions, discussed on :doc:`../basic/graphs`, will be used:"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:426
